--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffmpeg/core": "0.8.5",
     "@ffmpeg/ffmpeg": "0.9.8",
+    "@ffprobe-installer/ffprobe": "^2.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "git+https://gitee.com/suniv/node-fluent-ffmpeg.git",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mux.js": "^6.3.0",
+    "process": "^0.11.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -37,5 +46,6 @@
   },
   "devDependencies": {
     "react-app-rewired": "^2.2.1"
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
